--- a/demoapp/templates/demoapp/base.html
+++ b/demoapp/templates/demoapp/base.html
@@ -23,12 +23,20 @@
             <a class="navbar-brand" href="{% url 'dashboard' %}">Dashboard</a>
             <div class="ms-auto">
                 <span class="navbar-text me-3">Welcome, {{ user.username }}</span>
-                <a href="{% url 'login' %}" class="btn btn-outline-light btn-sm">Logout</a>
+                <a href="{% url 'logout' %}" class="btn btn-outline-light btn-sm">Logout</a>
             </div>
         </div>
     </nav>
     {% endif %}
     <div class="container py-4">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        {% endif %}
         {% block content %}{% endblock %}
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
